--- a/css/stylesheetall.css
+++ b/css/stylesheetall.css
@@ -2,6 +2,8 @@ body {
 	width: 100vw;
 	height: 100vh;
 	display: block;
+	margin: 0px;
+	overflow-x: hidden;
 	background: radial-gradient(#FFFFFF, #000000);
 }
 
